// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "borderColor": "#52C5DC",
            "borderWidth": 1,
            "padding": 2,
          },
          Object {
            "borderColor": "#52C5DC",
          },
          Object {
            "borderRadius": 12.5,
            "height": 25,
            "width": 25,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#52C5DC",
            "borderRadius": 100,
            "flex": 1,
            "opacity": 0,
            "transform": Array [
              Object {
                "scale": 0.3,
              },
            ],
          }
        }
      />
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Array [
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "marginLeft": 5,
            },
            undefined,
          ],
        ]
      }
    >
      Test label
    </Text>
  </View>
</View>
`;

exports[`renders not checked correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "borderColor": "#52C5DC",
            "borderWidth": 1,
            "padding": 2,
          },
          null,
          Object {
            "borderRadius": 12.5,
            "height": 25,
            "width": 25,
          },
        ]
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Array [
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "marginLeft": 5,
            },
            undefined,
          ],
        ]
      }
    >
      Test label
    </Text>
  </View>
</View>
`;

exports[`renders overriding default props 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
        Object {
          "padding": 10,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "borderColor": "#52C5DC",
            "borderWidth": 1,
            "padding": 2,
          },
          Object {
            "borderColor": "#52C5DC",
          },
          Object {
            "borderRadius": 15,
            "height": 30,
            "width": 30,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#52C5DC",
            "borderRadius": 100,
            "flex": 1,
            "opacity": 0,
            "transform": Array [
              Object {
                "scale": 0.3,
              },
            ],
          }
        }
      />
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Array [
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "marginLeft": 5,
            },
            Object {
              "fontSize": 24,
            },
          ],
        ]
      }
    >
      Test label
    </Text>
  </View>
</View>
`;
